tags doesn't count in this season

--- a/champs.ipynb
+++ b/champs.ipynb
@@ -50,37 +50,35 @@
     "                    for p in p2: results[p][\"points\"] += r2\n",
     "                    continue\n",
     "\n",
-    "                results[p1][\"points\"] += r1\n",
-    "                results[p2][\"points\"] += r2\n",
-    "\n",
     "                if r1 > r2:\n",
     "                    fullwin[p1] += 1\n",
     "                    fullloss[p2] += 1\n",
     "                    results[p1][\"wins\"] += 1\n",
+    "                    results[p1][\"points\"] += 3\n",
     "                    results[p2][\"defeats\"] += 1\n",
     "\n",
     "                elif r1 < r2:\n",
     "                    fullwin[p2] += 1\n",
     "                    fullloss[p1] += 1\n",
     "                    results[p2][\"wins\"] += 1\n",
+    "                    results[p2][\"points\"] += 3\n",
     "                    results[p1][\"defeats\"] += 1\n",
     "\n",
     "                else:\n",
     "                    results[p1][\"draws\"] += 1\n",
     "                    results[p2][\"draws\"] += 1\n",
-    "\n",
-    "                results[p1][\"points\"] += (r2 == 0)\n",
-    "                results[p2][\"points\"] += (r1 == 0)\n",
+    "                    results[p1][\"points\"] += 1\n",
+    "                    results[p2][\"points\"] += 1\n",
     "\n",
     "                results[p1][\"0wins\"] += (r2 == 0)\n",
     "                results[p2][\"0wins\"] += (r1 == 0)\n",
     "\n",
     "            for p in results:\n",
-    "                if fullwin[p] == 3:\n",
+    "                if fullwin[p] == 5:\n",
     "                    results[p][\"3wins\"] += 1\n",
     "                    results[p][\"points\"] += 1\n",
     "\n",
-    "                if fullloss[p] == 3:\n",
+    "                if fullloss[p] == 5:\n",
     "                    results[p][\"reverse\"] += 1\n",
     "\n",
     "        f.write(\"\\n\")\n",
@@ -109,6 +107,7 @@
     "    container = Label(root, name=name)\n",
     "\n",
     "    for g, game in enumerate(games):\n",
+    "        print(game)\n",
     "        for m, match in enumerate(game):\n",
     "\n",
     "            points = []\n",
@@ -148,10 +147,10 @@
    "source": [
     "def create_games(qnttags:int, qntmatches:int, root) -> None:\n",
     "\n",
-    "    tags = create_panel(\"tags\", [{((player, p), tuple(o for o in others if p != o)): () for p in others} for _ in range(qnttags)], root)\n",
+    "    # tags = create_panel(\"tags\", [{((player, p), tuple(o for o in others if p != o)): () for p in others} for _ in range(qnttags)], root)\n",
     "    rounds = create_panel(\"matches\", [{ m: () for m in list(combinations(players, 2)) } for _ in range(qntmatches)], root)\n",
     "\n",
-    "    Button(root, text=\"Save\", name=\"save\", command=lambda: show_results(rounds, tags, qntmatches, qnttags), width=25, **font).grid(columnspan=5)"
+    "    Button(root, text=\"Save\", name=\"save\", command=lambda: show_results(rounds, [], qntmatches, qnttags), width=25, **font).grid(columnspan=5)"
    ]
   },
   {
@@ -163,10 +162,10 @@
     "root = Tk()\n",
     "root.title(\"Yugioh Championship\")\n",
     "\n",
-    "qnttags = create_count(\"Tags\", root)\n",
+    "# qnttags = create_count(\"Tags\", root)\n",
     "qntmatches = create_count(\"Matches\", root, 2)\n",
     "\n",
-    "Button(root, text=\"Create\", command=lambda: create_games(int(qnttags.get()), int(qntmatches.get()), root), width=25, **font).grid(columnspan=5)\n",
+    "Button(root, text=\"Create\", command=lambda: create_games(0, int(qntmatches.get()), root), width=25, **font).grid(columnspan=5)\n",
     "\n",
     "root.mainloop()"
    ]
