--- a/champs.ipynb
+++ b/champs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,18 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "players = [\"Hards\", \"Regly\", \"Chris\", \"Lucas\", \"Antônio\", \"Filipe\"]\n",
+    "players = [\"Hards\", \"Regly\", \"Chris\", \"Lucas\", \"Antonio\", \"Filipe\"]\n",
     "font = {\"font\":(\"Arial\", 11)}\n",
     "player, *others = players"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
     "    results = { p[\"player\"]: { k: v for k, v in p.items() if k != \"player\" } for p in pd.read_csv(\"total.csv\").to_dict(\"records\") }\n",
     "\n",
     "    with open(\"plays.txt\", \"a\") as f:\n",
-    "        f.write(f'{results[\"Hards\"][\"round\"] + 1}° Round \\n' )\n",
+    "        f.write(f'Round {results[\"Hards\"][\"round\"] + 1}\\n' )\n",
     "\n",
     "        for matches in rounds + tags:\n",
     "            fullwin, fullloss = { p: 0 for p in players }, { p: 0 for p in players }\n",
@@ -75,8 +75,8 @@
     "\n",
     "            for p in results:\n",
     "                if fullwin[p] == 5:\n",
-    "                    results[p][\"3wins\"] += 1\n",
-    "                    results[p][\"points\"] += 1\n",
+    "                    results[p][\"5wins\"] += 1\n",
+    "                    results[p][\"points\"] += 2\n",
     "\n",
     "                if fullloss[p] == 5:\n",
     "                    results[p][\"reverse\"] += 1\n",
@@ -85,7 +85,7 @@
     "        f.write(\"*\" * 50)\n",
     "        f.write(\"\\n\")\n",
     "\n",
-    "    df = pd.DataFrame(results).T.sort_values([\"points\", \"wins\", \"3wins\", \"0wins\"], ascending=False) \\\n",
+    "    df = pd.DataFrame(results).T.sort_values([\"points\", \"wins\", \"5wins\", \"0wins\"], ascending=False) \\\n",
     "        .reset_index().rename(columns={\"index\": \"player\"})\n",
     "\n",
     "    df[\"round\"] = df[\"round\"].max() + 1\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,13 +141,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_games(qnttags:int, qntmatches:int, root) -> None:\n",
     "\n",
-    "    # tags = create_panel(\"tags\", [{((player, p), tuple(o for o in others if p != o)): () for p in others} for _ in range(qnttags)], root)\n",
+    "    tags = create_panel(\"tags\", [{((player, p), tuple(o for o in others if p != o)): () for p in others} for _ in range(qnttags)], root)\n",
     "    rounds = create_panel(\"matches\", [{ m: () for m in list(combinations(players, 2)) } for _ in range(qntmatches)], root)\n",
     "\n",
     "    Button(root, text=\"Save\", name=\"save\", command=lambda: show_results(rounds, [], qntmatches, qnttags), width=25, **font).grid(columnspan=5)"
@@ -162,7 +162,7 @@
     "root = Tk()\n",
     "root.title(\"Yugioh Championship\")\n",
     "\n",
-    "# qnttags = create_count(\"Tags\", root)\n",
+    "qnttags = create_count(\"Tags\", root)\n",
     "qntmatches = create_count(\"Matches\", root, 2)\n",
     "\n",
     "Button(root, text=\"Create\", command=lambda: create_games(0, int(qntmatches.get()), root), width=25, **font).grid(columnspan=5)\n",
