po asked for changes

--- a/champs.ipynb
+++ b/champs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,37 +46,42 @@
     "                f.write(f\"{p1} {r1} X {r2} {p2}\\n\")\n",
     "                if isinstance(p1, tuple):\n",
     "\n",
-    "                    for p in p1: results[p][\"points\"] += r1\n",
-    "                    for p in p2: results[p][\"points\"] += r2\n",
+    "                    for p in p1: results[p][\"pts\"] += r1\n",
+    "                    for p in p2: results[p][\"pts\"] += r2\n",
     "                    continue\n",
     "\n",
     "                if r1 > r2:\n",
     "                    fullwin[p1] += 1\n",
     "                    fullloss[p2] += 1\n",
-    "                    results[p1][\"wins\"] += 1\n",
-    "                    results[p1][\"points\"] += 3\n",
-    "                    results[p2][\"defeats\"] += 1\n",
+    "                    results[p1][\"pts\"] += 3\n",
+    "                    results[p1][\"m. won\"] += 1\n",
+    "                    results[p2][\"m. lost\"] += 1\n",
     "\n",
     "                elif r1 < r2:\n",
     "                    fullwin[p2] += 1\n",
     "                    fullloss[p1] += 1\n",
-    "                    results[p2][\"wins\"] += 1\n",
-    "                    results[p2][\"points\"] += 3\n",
-    "                    results[p1][\"defeats\"] += 1\n",
+    "                    results[p2][\"pts\"] += 3\n",
+    "                    results[p2][\"m. won\"] += 1\n",
+    "                    results[p1][\"m. lost\"] += 1\n",
     "\n",
     "                else:\n",
+    "                    results[p1][\"pts\"] += 1\n",
+    "                    results[p2][\"pts\"] += 1\n",
     "                    results[p1][\"draws\"] += 1\n",
     "                    results[p2][\"draws\"] += 1\n",
-    "                    results[p1][\"points\"] += 1\n",
-    "                    results[p2][\"points\"] += 1\n",
     "\n",
-    "                results[p1][\"0wins\"] += (r2 == 0)\n",
-    "                results[p2][\"0wins\"] += (r1 == 0)\n",
+    "                results[p1][\"wins\"] += r1\n",
+    "                results[p2][\"wins\"] += r2\n",
+    "                results[p1][\"loses\"] += r2\n",
+    "                results[p2][\"loses\"] += r1\n",
+    "\n",
+    "                results[p1][\"2x0\"] += (r2 == 0)\n",
+    "                results[p2][\"2x0\"] += (r1 == 0)\n",
     "\n",
     "            for p in results:\n",
     "                if fullwin[p] == 5:\n",
-    "                    results[p][\"5wins\"] += 1\n",
-    "                    results[p][\"points\"] += 2\n",
+    "                    results[p][\"pts\"] += 2\n",
+    "                    results[p][\"sweep\"] += 1\n",
     "\n",
     "                if fullloss[p] == 5:\n",
     "                    results[p][\"reverse\"] += 1\n",
@@ -85,13 +90,11 @@
     "        f.write(\"*\" * 50)\n",
     "        f.write(\"\\n\")\n",
     "\n",
-    "    df = pd.DataFrame(results).T.sort_values([\"points\", \"wins\", \"5wins\", \"0wins\"], ascending=False) \\\n",
+    "    df = pd.DataFrame(results).T.sort_values([\"pts\", \"m. won\", \"sweep\", \"2x0\"], ascending=False) \\\n",
     "        .reset_index().rename(columns={\"index\": \"player\"})\n",
     "\n",
     "    df[\"round\"] = df[\"round\"].max() + 1\n",
     "    df.to_csv(\"total.csv\", index=False)\n",
-    "    df[\"matches\"] = qntmatches\n",
-    "    df[\"tags\"] = qnttags\n",
     "\n",
     "    pd.concat([pd.read_csv(\"points.csv\"), df]).to_csv(\"points.csv\", index=False)\n",
     "    print(df.to_string(index=False))"
@@ -99,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
