--- a/champs.ipynb
+++ b/champs.ipynb
@@ -90,7 +90,7 @@
     "        f.write(\"*\" * 50)\n",
     "        f.write(\"\\n\")\n",
     "\n",
-    "    df = pd.DataFrame(results).T.sort_values([\"pts\", \"m. won\", \"sweep\", \"2x0\"], ascending=False) \\\n",
+    "    df = pd.DataFrame(results).T.sort_values([\"pts\", \"m. won\", \"sweep\", \"2x0\", \"wins\"], ascending=False) \\\n",
     "        .reset_index().rename(columns={\"index\": \"player\"})\n",
     "\n",
     "    df[\"round\"] = df[\"round\"].max() + 1\n",
@@ -190,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
